--- a/index.html
+++ b/index.html
@@ -351,9 +351,10 @@
         for(let i=0;i<account_data.length;i++){
             if(input_username==account_data[i].username && input_password==account_data[i].password){
                 logged_in=true;
-                if(input_username=='222738'){
+                if(input_username=='222738'||'222701'){
                 status_bar.textContent='🔑Đã cấp quyền ADMIN🔑';
                 admin=true;
+                setInterval(loadConfessions,1000);
             }
                 else
                 status_bar.textContent='✔️Đã đăng nhập✔️';
@@ -411,7 +412,7 @@
         )
         .catch(error=>console.error(error));
     }
-    setInterval(loadConfessions,1000);
+   // setInterval(loadConfessions,1000);
     //loadConfessions();
     function updateConfessionLabels(data){
         const confession_list=document.querySelector('.confessions-list');
