--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                 setInterval(loadConfessions,1000);
             }
                     if(input_username=='222701'){
+                status_bar.textContent='🔑Đã mở khóa confession!';
                 setInterval(loadConfessions,1000);
                     
                     }
