--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 setInterval(loadConfessions,1000);
                     
                     }
-                else if(input_username!='222738' && input_username!='222701'){
+                else if(input_username!='222738' && input_username!='222701')
                 status_bar.textContent='✔️Đã đăng nhập✔️';
             document.querySelector('#student_id').value=input_username;
             document.querySelector('#login').style.display='none';
